--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -7,8 +7,9 @@ services:
       - db_data:/var/lib/postgresql/data/
     env_file:
       - ./.env
+
   web:
-    build: ../api_yamdb
+    image: arhonist/infra_sp2:latest
     restart: always
     volumes:
       - static_value:/app/static/
