--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -44,7 +44,7 @@ jobs:
         uses: docker/build-push-action@master
         with:
           push: true
-          tags: arhonist/infra_actions:latest
+          tags: arhonist/yamdb_final:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -59,10 +59,11 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
           script: |
             # Выполняет pull образа с DockerHub
-            sudo docker pull arhonist/infra_actions:latest
+            sudo docker pull arhonist/yamdb_final:latest
             #остановка всех контейнеров
             sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 arhonist/infra_actions
+            sudo docker run --rm -d -p 5000:5000 arhonist/yamdb_final
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
