Added push context

--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@master
         with:
+          context: ./api_yamdb
           push: true
           tags: arhonist/yamdb_final:latest
 
